<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypesversion="2.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.0</version>
  <description>Robot bringup launch and config files</description>
  <maintainer email="harim9340@gmail.com">rim</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rmd_x8_driver</exec_depend>
  <exec_depend>myahrs_driver</exec_depend>
  <exec_depend>joy</exec_depend>

  <depend>rclcpp</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>diagnostic_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>